# OCR_justifai

./: certificate_to_json.py  csv_sample.json  csv_to_json.py  generate_hash.py  json_restructure.py  json_to_keccak.py  list_models.py  multilingual_parse_to_json.py  parse_to_json.py  preprocessing.py  pyproject.toml  split_pdf.py  transcript_to_json.py  trilingual_parse_to_json.py
csv_to_json/: 20161357.json  20165639.json  20166669.json  20166768.json  20172903.json  20174304.json  20174453.json  20175638.json  20178615.json
json_files/: Sem-3 Economics_page-1_parsed.json  Sem-3 Zoology_page-1_parsed.json  Sem-5 Arts_page-1_parsed.json  Sem-5 Commerce_page-1_parsed.json  Sem-5 Science_page-0001_parsed.json  certificate-cef0db94-e1a0-4a03-8822-4b5e80b60f7f_page-1_parsed.json  sem 1.0_page-1_parsed.json  sem 1_parsed.json  sem 2.0_page-1_parsed.json  sem 3_parsed.json
trilingual_json_files/: 1000038631_trilingual.json  1000038632_trilingual.json  1000038633_trilingual.json  1000038634_trilingual.json  1000038635_trilingual.json  1000038636_trilingual.json  1000038637_trilingual.json  1000038638_trilingual.json  1000038639_trilingual.json  1000038640_trilingual.json  1000038643_trilingual.json  1000303455_rectified.json  14_VER_B.Sc. M.Sc. Degree Transcript_removed_page-1_trilingual.json  4_VER_CF-CASE-435451-EDU_page-1_trilingual.json  Sem1 Result_rectified.json  Test1 Transcripts_page-0001_rectified.json  Test1 Transcripts_rectified.json  certificate-a28c8519-747a-4a50-a471-5906802dd3d9 (1)_page-0001_rectified.json  (+2 more)
