[project]
name = "justifai-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "opencv-contrib-python>=4.13.0.92",
    "easyocr>=1.7.0",
    "pytesseract>=0.3.10",
    "python-multipart>=0.0.24",
    "uvicorn>=0.44.0",
]
